# ed2kia

./: $null  .gitignore  .tmp_vision_append.md  CHANGELOG.md  CODEOWNERS  COMMUNITY_LAUNCH_CHECKLIST.md  COMMUNITY_POSTS_EXECUTION_READY.md  COMMUNITY_POSTS_READY.md  CONTRIBUTING.md  Cargo.toml  DAY1_OPERATIONS_PROMPT.md  GOVERNANCE.md  HANDOVER.md  ISSUES_BATCH_V1.7.md  ISSUES_BATCH_V1.8.md  LICENSE  POST_LAUNCH_TRIAGE.md  README.md  SECURITY.md  SUPPORT.md  Trunk.toml  WEEKLY_STANDUP_PROMPT.md  WHITE_PAPER.md  agent.py  cargo_build_s142.txt  cargo_check_output.txt  cargo_check_s136.txt  cargo_check_s136_v2.txt  cargo_check_sprint84.txt  cargo_check_sprint84_v2.txt  cargo_check_sprint87_final.txt  cargo_check_sprint87_latest.txt  cargo_test_s142.txt  cargo_test_s142_steering.txt  cargo_warnings_sprint87.txt  clippy_sprint87.txt  clippy_sprint87_final.txt  clippy_sprint87_v2.txt  deep_koopman_build.txt  justfile  (+18 more)
.cargo/: config.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  first-interaction.yml  labeler.yml  labels.json
benches/: omni_node_scaling.rs
benchmarks/: Cargo.toml  README.md  alignment_benchmarks.rs  run_advbench_eval.sh  v2_1_hooks.rs  wasm_homology_latency.rs
benchmarks/benches/: crdt_merge.rs  neural_ode_mechanism.rs  p2p_sync.rs  sae_inference.rs  sae_loader.rs  tensor_serialization.rs
benchmarks/results/: baseline-v1.7.json
config/: bootstrap_peers.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: emergence.rs  eternal_governance.rs  game_theory.rs  governance.rs  hierarchical_sharding.rs  lib.rs  mean_field.rs  posym.rs  pous.rs  replicator.rs  value_alignment.rs
crates/consensus/tests/: evolutionary_game_test.rs  sprint122_test.rs
crates/llamacpp-bridge/: Cargo.toml
crates/llamacpp-bridge/src/: config.rs  inference.rs  lib.rs  sae_audit.rs  tcm.rs
crates/native-audit/: Cargo.toml  test_output.txt
crates/native-audit/benches/: edge_lmi_benchmark.rs  koopman_mpc_vs_baseline.rs  s171_dr_cbf_conformal.rs
crates/native-audit/src/: adversarial.rs  category_manifolds.rs  cbf_mpc.rs  cirl_value_learning.rs  collective_steering.rs  collective_zonotope.rs  conformal.rs  control.rs  control_lmi.rs  cross_attention.rs  dashboard.rs  deep_koopman.rs  distributed_sae.rs  edge_runtime.rs  event_triggered.rs  formal_barrier.rs  formal_verification.rs  gguf_audit.rs  global_bootstrap.rs  hybrid_zonotope.rs  hzi_taylor.rs  koopman_pinn.rs  koopman_rls.rs  lib.rs  live_testnet.rs  mechanism_design.rs  meta_active_inference.rs  meta_improvement.rs  multimodal.rs  neural_ode.rs  p2p_mechanism.rs  phase_transition.rs  planetary_sim.rs  provable_safety.rs  quantum_coherence.rs  replicator.rs  sae_integration.rs  sae_modular.rs  singularity_stabilization.rs  sparse_federated_sae.rs  (+10 more)
crates/native-audit/tests/: ablation_study.rs  adv_redteam.rs  advbench_eval.rs  barrier_cert_test.rs  cirl_alignment_test.rs  collective_cert_test.rs  collective_inference_test.rs  collective_zonotope_test.rs  deep_koopman_eval.rs  distributed_training_test.rs  edge_realworld_benchmark.rs  energy_symbiosis_eval.rs  formal_verification_eval.rs  gguf_robustness_eval.rs  global_defense_benchmark.rs  goliath_gguf_audit.rs  harmbench_certified_eval.rs  hybrid_zonotope_test.rs  koopman_contracting_eval.rs  koopman_eval.rs  koopman_mpc_eval.rs  latency_benchmark.rs  mechanism_design_test.rs  mechanistic_sae_test.rs  meta_inference_test.rs  mpc_eval.rs  multimodal_inference_test.rs  nes_meta_test.rs  neural_koopman_eval.rs  neural_ode_test.rs  real_toxicity_eval.rs  s165_pac_online_eval.rs  s168_dimensional_collapse_eval.rs  scalability_4096d.rs  scalability_test.rs  sindy_koopman_eval.rs  sprint113_test.rs  sprint115_test.rs  sprint118_test.rs  sprint119_test.rs  (+13 more)
crates/noosfera-kernel/: Cargo.toml
crates/noosfera-kernel/src/: awakening.rs  dynamics.rs  eternal_symbiosis.rs  lib.rs  provable_irreversibility.rs
crates/ollama-bridge/: Cargo.toml
crates/ollama-bridge/src/: config.rs  inference.rs  lib.rs  sae_audit.rs  tcm.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: distributed_sae.rs  lib.rs  universal_symbiosis_protocol.rs
crates/sae/: Cargo.toml
crates/sae/src/: lib.rs  scheduler.rs
data/: model_info.json
demos/: ed2kIA_bridge_demo.cast
deploy/: Dockerfile  docker-compose.testnet.yml  docker-compose.yml  seed_bootstrap.sh  seed_config.example.toml
devtools/: docker-compose.yml  setup.sh
docs/: AWAKENING_MANIFESTO.md  CODEX_OF_ABSOLUTE_RESONANCE.md  COMMUNITY_ONBOARDING.md  CONTRIBUTING.md  COVENANT_OF_ETERNAL_RESONANCE.md  GITCOIN_GRANTS_APPLICATION_TEMPLATE.md  GOVERNANCE.md  LAUNCH_GUIDE.md  MIGRATION_LOG_v0.5.0.md  MONITORING.md  NETWORK_BOOTSTRAP.md  NEXT_SPRINT.md  NODE_OPERATOR_GUIDE.md  OPERATIONAL_PROMPT_v11.0.md  OPERATIONS_RUNBOOK.md  PHASE6_ROADMAP.md  PHASE6_SPRINT1_REPORT.md  PHASE6_SPRINT2_REPORT.md  PHASE6_TRANSITION_PLAN.md  PHASE7_SPRINT1_KICKOFF.md  PHASE7_SPRINT1_REPORT.md  PHASE8_SPRINT1_REPORT.md  POST_LAUNCH_HANDOFF.md  POST_LAUNCH_HANDOFF_v1.2.md  POST_LAUNCH_HANDOFF_v1.5.md  POST_LAUNCH_ROADMAP.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0-RC.md  RELEASE_NOTES_v0.7.0-BETA.md  RELEASE_NOTES_v1.0.0.md  ROADMAP_CIVILIZATION_SCALE.md  SECURITY_DISCLOSURE.md  SNAP_CIVILIZATION_ROADMAP.md  STUARTIAN_LEGACY_PROTOCOL.md  STUARTIAN_OMEGA_PROTOCOL.md  TRANSPARENCY_FRAMEWORK.md  VALIDATION_REPORT_v0.5.0.md  architecture_v1.2.0.md  architecture_v1.3.0.md  architecture_v1.4.0.md  (+77 more)
infra/: docker-compose.testnet-v2.1.yml  testnet-metrics-simulated.json
models/: dummy_qwen_scope.safetensors
monitoring/: prometheus.yml
notebooks/: ed2kIA_sae_audit_colab.ipynb  ed2kIA_sae_audit_demo.ipynb
ops/: audit_checklist.md  benchmark_runner.sh  canary_deploy.sh  monitoring_activation.md  operator_onboarding.md  rollback_v0.6.0.sh
paper/: compile.sh  ed2kIA_sae_audit.tex  paper_draft_sprint111.md  paper_draft_sprint112.md
phase6/: architecture_v2.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+935 files in other folders)
